sass integration complete

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -8,3 +8,8 @@ a[target='_blank']:after {
   are set to edit mode.
 */
 .scChromeData, .scpm { display: none !important; }
+
+.test-class {
+  background-color: red;
+  color: blue;
+}
