css modules working

--- a/src/assets/app.module.css
+++ b/src/assets/app.module.css
@@ -8,3 +8,11 @@ a[target='_blank']:after {
   are set to edit mode.
 */
 .scChromeData, .scpm { display: none !important; }
+
+.thingy {
+  background-color: green;
+}
+
+body { 
+  background-color: antiquewhite;
+}
