create login component

--- a/src/assets/app.module.scss
+++ b/src/assets/app.module.scss
@@ -10,9 +10,9 @@ a[target='_blank']:after {
 .scChromeData, .scpm { display: none !important; }
 
 .thingy {
-  background-color: green;
+  // background-color: green;
 }
 
 body { 
-  background-color: antiquewhite;
+  // background-color: antiquewhite;
 }
