--- a/src/components/Login/login.module.scss
+++ b/src/components/Login/login.module.scss
@@ -11,7 +11,65 @@
 
 .loginContainer {
     width: 444px;
-    // height: 578px;
-    background-color: aliceblue;
-    margin: 0 auto;
+    background-color: rgb(255, 255, 255);
+    padding: 32px;
+
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+0px 6px 14px -1px rgba(0, 0, 0, 0.2);
+
+    font-family: "acumin-pro", Helvetica, Arial, sans-serif;
+
+    h2 {
+        font-size: 32px;
+        line-height: 48px;
+        font-weight: 600;
+        color: rgb(38, 38, 38);
+        text-align: center;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+
+        label {
+            color: rgb(84, 84, 84);
+            font-size: 16px;
+            line-height: 24px;
+            letter-spacing: 0.2px;
+            margin-top: 24px;
+
+            div {
+                display: flex;
+                justify-content: space-between;
+            }
+
+            a {
+                color: rgb(46, 82, 118);
+                font-size: 14px;
+                font-weight: 500;
+                letter-spacing: 0.4px;
+                line-height: 21px;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        input {
+            width: 100%;
+            height: 48px;
+            border: 1px solid rgb(168, 168, 168);
+        }
+    }
 }
+
+
+
