--- a/src/components/Login/login.module.scss
+++ b/src/components/Login/login.module.scss
@@ -44,10 +44,12 @@
             line-height: 24px;
             letter-spacing: 0.2px;
             margin-top: 24px;
+            margin-bottom: 0;
 
             div {
                 display: flex;
                 justify-content: space-between;
+                margin-bottom: 5px;
             }
 
             a {
@@ -56,6 +58,7 @@
                 font-weight: 500;
                 letter-spacing: 0.4px;
                 line-height: 21px;
+                cursor: pointer;
 
                 &:hover {
                     text-decoration: underline;
@@ -63,12 +66,70 @@
             }
         }
 
-        input {
+        input[type="text"] {
             width: 100%;
             height: 48px;
             border: 1px solid rgb(168, 168, 168);
         }
+
+        input[type="submit"] {
+            border: none;
+            outline: inherit;
+            background-color: rgb(46, 82, 118);
+            color: rgb(255, 255, 255);
+            height: 48px;
+            width: 100%;
+            text-align: center;
+            margin: 32px 0;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgb(69, 122, 176);
+            }
+        }
     }
+
+    hr {
+        margin: 0;
+        margin-bottom: 32px;
+    }
+
+    .createAccountSection {
+        text-align: center;
+
+        h3 {
+            color: rgb(0, 0, 0);
+            font-size: 20px;
+            font-weight: bold;
+            letter-spacing: 0px;
+            line-height: 30px;
+            margin-bottom: 8px;
+        }
+
+        p {
+            color: rgb(84,84,84);
+            font-size: 16px;
+            font-weight: normal;
+            letter-spacing: 0.2px;
+            line-height: 24px;
+            margin-bottom: 16px;
+        }
+
+        a {
+            text-transform: uppercase;
+            color: rgb(46, 82, 118);
+            font-size: 14px;
+            font-weight: bold;
+            letter-spacing: 0.4px;
+            line-height: 21px;
+            cursor: pointer;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+
 }
 
 
