--- a/src/components/Login/login.module.scss
+++ b/src/components/Login/login.module.scss
@@ -63,6 +63,11 @@
                 &:hover {
                     text-decoration: underline;
                 }
+
+                &:focus {
+                    outline: 2px solid rgb(46, 82, 118);
+                    border-radius: 2px;
+                }
             }
         }
 
@@ -70,6 +75,10 @@
             width: 100%;
             height: 48px;
             border: 1px solid rgb(168, 168, 168);
+
+            &:focus {
+                outline: solid 1px rgb(168, 168, 168);
+            }
         }
 
         input[type="submit"] {
@@ -83,9 +92,12 @@
             margin: 32px 0;
             cursor: pointer;
 
-            &:hover {
+            &:hover,
+            &:focus {
                 background-color: rgb(69, 122, 176);
             }
+
+            
         }
     }
 
@@ -126,6 +138,11 @@
 
             &:hover {
                 text-decoration: underline;
+            }
+
+            &:focus {
+                outline: 2px solid rgb(46, 82, 118);
+                border-radius: 2px;
             }
         }
     }
