--- a/src/components/Login/login.module.scss
+++ b/src/components/Login/login.module.scss
@@ -10,21 +10,19 @@
 }
 
 .loginContainer {
+    // box-sizing: border-box;
     width: 444px;
     background-color: rgb(255, 255, 255);
     padding: 32px;
-
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-0px 6px 14px -1px rgba(0, 0, 0, 0.2);
-
-    font-family: "acumin-pro", Helvetica, Arial, sans-serif;
+        0px 6px 14px -1px rgba(0, 0, 0, 0.2);
+    // font-family: "acumin-pro", Helvetica, Arial, sans-serif;
 
     h2 {
         font-size: 32px;
@@ -59,6 +57,7 @@
                 letter-spacing: 0.4px;
                 line-height: 21px;
                 cursor: pointer;
+                text-decoration: none;
 
                 &:hover {
                     text-decoration: underline;
@@ -71,10 +70,19 @@
             }
         }
 
-        input[type="text"] {
+        input[type="text"],
+        input[type="password"] {
+            // box-sizing: border-box;
             width: 100%;
             height: 48px;
             border: 1px solid rgb(168, 168, 168);
+            color: rgb(38, 38, 38);
+            font-size: 20px;
+            font-weight: normal;
+            letter-spacing: 0px;
+            line-height: 30px;
+            padding: 0 10px 0 20px;
+            // padding-left: 20px;
 
             &:focus {
                 outline: solid 1px rgb(168, 168, 168);
@@ -91,13 +99,26 @@
             text-align: center;
             margin: 32px 0;
             cursor: pointer;
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 0.4px;
+            line-height: 21px;
+            font-family: "acumin-pro", Helvetica, Arial, sans-serif;
 
             &:hover,
             &:focus {
                 background-color: rgb(69, 122, 176);
-            }
+            }           
+        }
 
-            
+        .errorMessage {
+            color: rgb(204, 0, 0);
+            font-size: 16px;
+            font-weight: normal;
+            letter-spacing: 0.2px;
+            line-height: 24px;
+            margin-top: 24px;
         }
     }
 
@@ -135,6 +156,7 @@
             letter-spacing: 0.4px;
             line-height: 21px;
             cursor: pointer;
+            text-decoration: none;
 
             &:hover {
                 text-decoration: underline;
