mobile styling complete

--- a/src/assets/app.module.scss
+++ b/src/assets/app.module.scss
@@ -9,10 +9,7 @@ a[target='_blank']:after {
 */
 .scChromeData, .scpm { display: none !important; }
 
-.thingy {
-  // background-color: green;
-}
-
 body { 
   background-color: #f2f2f2;
+  font-family: "acumin-pro", Helvetica, Arial, sans-serif;
 }
