--- a/src/components/Login/login.module.scss
+++ b/src/components/Login/login.module.scss
@@ -1,3 +1,4 @@
+$login-mobile-breakpoint: 480px;
 
 .contentWrapper {
     background-color: goldenrod;
@@ -10,7 +11,6 @@
 }
 
 .loginContainer {
-    // box-sizing: border-box;
     width: 444px;
     background-color: rgb(255, 255, 255);
     padding: 32px;
@@ -22,7 +22,12 @@
     transform: translate(-50%, -50%);
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
         0px 6px 14px -1px rgba(0, 0, 0, 0.2);
-    // font-family: "acumin-pro", Helvetica, Arial, sans-serif;
+
+    @media screen and (max-width: $login-mobile-breakpoint) {
+        width: 100%;
+        height: 100%;
+        padding: 20px 20px 96px 20px;
+    }
 
     h2 {
         font-size: 32px;
@@ -30,6 +35,10 @@
         font-weight: 600;
         color: rgb(38, 38, 38);
         text-align: center;
+
+        @media screen and (max-width: $login-mobile-breakpoint) {
+            font-size: 26px;
+        }
     }
 
     form {
@@ -109,7 +118,12 @@
             &:hover,
             &:focus {
                 background-color: rgb(69, 122, 176);
-            }           
+            }    
+            
+            &:disabled {
+                background-color:rgba(46, 82, 118, 0.5);
+                cursor: not-allowed;
+            }
         }
 
         .errorMessage {
