--- a/src/components/Login/login.module.scss
+++ b/src/components/Login/login.module.scss
@@ -1,15 +1,5 @@
 $login-mobile-breakpoint: 480px;
 
-.contentWrapper {
-    background-color: goldenrod;
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
-
 .loginContainer {
     width: 444px;
     background-color: rgb(255, 255, 255);
@@ -27,6 +17,7 @@ $login-mobile-breakpoint: 480px;
         width: 100%;
         height: 100%;
         padding: 20px 20px 96px 20px;
+        margin-top: 80px;
     }
 
     h2 {
@@ -81,7 +72,6 @@ $login-mobile-breakpoint: 480px;
 
         input[type="text"],
         input[type="password"] {
-            // box-sizing: border-box;
             width: 100%;
             height: 48px;
             border: 1px solid rgb(168, 168, 168);
@@ -91,7 +81,6 @@ $login-mobile-breakpoint: 480px;
             letter-spacing: 0px;
             line-height: 30px;
             padding: 0 10px 0 20px;
-            // padding-left: 20px;
 
             &:focus {
                 outline: solid 1px rgb(168, 168, 168);
