--- a/src/components/AccountFooter/accountFooter.module.scss
+++ b/src/components/AccountFooter/accountFooter.module.scss
@@ -5,7 +5,7 @@ $accountFooter-tablet-breakpoint: 768px;
 .accountFooter {
     width: 100%;
     background-color: rgb(255, 255, 255);
-    position: fixed;
+    // position: fixed;
     bottom: 0;
     padding: 24px;
 
