--- a/src/components/AccountFooter/accountFooter.module.scss
+++ b/src/components/AccountFooter/accountFooter.module.scss
@@ -8,6 +8,7 @@ $accountFooter-tablet-breakpoint: 768px;
     // position: fixed;
     bottom: 0;
     padding: 24px;
+    border-top: 1px solid rgb(191, 191, 191);
 
     @media screen and (max-width: $accountFooter-mobile-breakpoint) {
         flex-direction: column;
