--- a/src/components/Login/login.module.scss
+++ b/src/components/Login/login.module.scss
@@ -7,6 +7,10 @@ $login-mobile-breakpoint: 480px;
     @media screen and (max-height: 830px) {
         min-height: 642px;
     }
+
+    @media screen and (max-width: $login-mobile-breakpoint) {
+        min-height: 0;
+    }
 }
 
 .loginModal {
@@ -15,7 +19,6 @@ $login-mobile-breakpoint: 480px;
     padding: 32px;
     margin: 0;
     position: absolute;
-    // top: 50%;
     margin-top: 323px;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
@@ -26,8 +29,14 @@ $login-mobile-breakpoint: 480px;
     @media screen and (max-width: $login-mobile-breakpoint) {
         width: 100%;
         height: 100%;
-        padding: 20px 20px 96px 20px;
-        margin-top: 80px;
+        padding: 20px 20px 64px 20px;
+        margin-top: 382px;
+        box-shadow: none;
+        position: static;
+        transform: none;
+        -ms-transform: none;
+        margin-top: 0;
+        
     }
 
     h2 {
