--- a/src/components/AccountHeader/accountHeader.module.scss
+++ b/src/components/AccountHeader/accountHeader.module.scss
@@ -13,7 +13,7 @@ $accountHeader-mobile-breakpoint: 480px;
     position: relative;
     z-index: 99999;
 
-    img {
+    > img {
         margin: 26px 0 26px 59px;
 
         @media screen and (max-width: $accountHeader-tablet-breakpoint) {
@@ -33,6 +33,8 @@ $accountHeader-mobile-breakpoint: 480px;
         font-weight: normal;
         letter-spacing: 0.2px;
         line-height: 24px;
+        display: flex;
+        align-items: center;
 
         @media screen and (max-width: $accountHeader-tablet-breakpoint) {
             margin-right: 30px;
@@ -51,10 +53,15 @@ $accountHeader-mobile-breakpoint: 480px;
             border-radius: 2px;
         }
 
-        svg {
+        img {
             margin-right: 14px;
+            width: 6px;
             position: relative;
-            top: 4px;        
+            top: 1px;
+
+            @media screen and (max-width: $accountHeader-mobile-breakpoint) {
+                width: 5px;
+            }
         }
 
         .mobileLinkText {
